fix tab size CSS not recognized on Firefox (prefix added)

--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -186,6 +186,8 @@ body {
 	line-height: 1.2em;
 	word-wrap: break-word;
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+	-moz-tab-size: 2;
+	-o-tab-size: 2;
 	tab-size: 2;
 }
 
